# Expense_Manager

./: .gitattributes  README.md
backend/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
backend/routes/: __init__.py  expense_transactions.py  summary.py  users.py
backend/services/: __init__.py  chat_agent.py  preprocessor.py
backend/utils/: __init__.py  db.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: card.tsx
frontend/src/contexts/: AuthContext.tsx  AuthContextMock.tsx
frontend/src/pages/: Dashboard.tsx  DashboardMock.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
