[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.5",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pydantic[email]>=2.11.7",
    "pymongo>=4.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
